# account_workbench

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  deps.py  rbac.py  scope.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  account.py  audit.py  checkpoint.py  contact.py  cs_goal.py  document.py  engagement.py  intel_news.py  meeting_brief.py  metric.py  play.py  signal.py  solutioning.py  user.py  user_favorite.py
apps/api/app/routes/: accounts.py  ai_brief.py  auth.py  brief_ai.py  checkpoints.py  contacts.py  cs_goals.py  cs_onboarding.py  delivery_renewal.py  documents.py  engagement.py  escalations.py  favorites.py  intel_news.py  leadership.py  lookups.py  meeting_brief.py  metrics.py  platform_intel.py  plays.py  reports.py  signals.py  signing.py  solutioning.py  success_contract.py  users.py  vdd.py
apps/api/app/schemas/: account.py  account_detail.py  checkpoint.py  contact.py  cs_goal.py  cs_goals_extraction.py  cs_onboarding.py  delivery_renewal.py  document.py  engagement.py  escalation.py  lookup.py  (+14 more)
apps/api/tests/: conftest.py  test_account_detail.py  test_account_rollups.py  test_accounts.py  test_admin.py  test_auth.py  test_checkpoints.py  test_contacts.py  test_cs_goals.py  test_cs_goals_extraction.py  test_cs_onboarding.py  test_delivery_renewal.py  test_documents.py  test_engagement.py  test_health.py  test_intel_news.py  test_leadership.py  test_meeting_brief.py  test_metrics.py  test_platform_intel.py  test_plays.py  test_reports.py  test_signals.py  test_signing.py  test_solutioning_lock.py  test_success_contract.py  test_vdd.py
(+233 files in other folders)
